# tunai-pro

./: .gitignore  .metadata  HANDOFF.md  HISTORY.md  PRO_CROSSOVER_AUDIT.md  README.md  TUNAI_FLOW_AUDIT.md  pubspec.yaml
installer/: build_installer.ps1  tunai_pro.iss
lib/: main.dart
macos/: Podfile
test/: adau1701_ch0_band0_decoder_test.dart  adau1701_ch0_band0_read_service_test.dart  adau1701_deployment_preflight_test.dart  adau1701_deployment_report_test.dart  adau1701_icp5_tuning_panel_test.dart  adau1701_icp5_tuning_workflow_test.dart  adau1701_peq_band_decoder_test.dart  adau1701_peq_deployment_gate_test.dart  adau1701_peq_preset_test.dart  adau1701_peq_response_graph_test.dart  adau1701_peq_response_test.dart  adau1701_transport_identity_test.dart  consumer_ble_service_test.dart  dsp_readback_test.dart  dsp_transport_phase_a_test.dart  hardware_apply_flow_test.dart  hardware_apply_preview_test.dart  hardware_context_sharing_test.dart  hardware_tab_mv_verification_ui_test.dart  icp5_bluetooth_connection_ui_test.dart  icp5_bluetooth_transport_test.dart  icp5_bluetooth_windows_driver_test.dart  icp5_phase_c_test.dart  icp5_raw_state_read_test.dart  icp5_reconnect_test.dart  icp5_usb_phase_b_test.dart  icp5_windows_lifecycle_test.dart  mac_icp5_lifecycle_test.dart  mac_icp5_serial_driver_test.dart  operational_master_volume_test.dart  optimizer_preview_graph_test.dart  overflow_smoke_test.dart  (+47 more)
tools/: CMakeLists.txt  README.md
tools/src/: logger.cpp  logger.h  main.cpp  packet_builder.cpp  packet_builder.h  usbi_device.cpp  usbi_device.h
(+225 files in other folders)
